# Simple-Memory-Extension-MCP-Server

./: .env.example  .eslintrc.js  .gitignore  .prettierrc  README.md  biome.json  package-lock.json  package.json  requirements.txt  tsconfig.json
data/: context.db  memory.db
python/: pyproject.toml
python/src/simple_memory_models/: __init__.py  runtime.py  worker.py
scripts/: http-probe.mjs  live-probe.mjs  queue-probe.mjs  setup.js  setup.mjs  start.js
src/: cli.ts  config.ts  index.ts  logger.ts
src/access/: authorization.ts  oauth.ts
src/application/: create-service.ts  memory-service.ts
src/domain/: errors.ts  json.ts  types.ts
src/indexing/: indexer.ts  projector.ts
src/lib/: chunking-util.ts  context-manager.ts  embedding-service.ts  errors.ts  http-server.ts  logger.ts  namespace-manager.ts  search-module.ts  sqlite-store.ts  tool-definitions.ts  tool-implementations.ts
src/mcp/: server.ts
src/models/: model-client.ts
src/python/: download_model.py  embedding_service.py
src/retrieval/: search-engine.ts
src/storage/: memory-store.ts  schema.ts
src/storage/migrations/: 002-link-traversal-indexes.ts  003-revision-aware-feedback.ts  004-logical-identity-and-merges.ts  index.ts
src/transports/: http.ts
